@@ -263,7 +263,7 @@ xml-generate-extra-phrases:		ok
 continue-after:				unconformable
 goto-entry:				unconformable
 binary-sync-clause:		ignore
-nonnumeric-with-numeric-group-usage:	ok
+nonnumeric-with-numeric-group-usage:	error
 assign-variable:			unconformable
 assign-using-variable:			unconformable
 assign-ext-dyn:				ok
